# GenAI

./: README.md  pyproject.toml
learning_langchain/: Problem&Solution.md  README.md  pyproject.toml  requirements.txt
learning_langchain/Chains/: Readme.md  conditional_chain.py  parallel_chain.py  sequential_chain.py  simple_chain.py
learning_langchain/Chains/ChainTypes/: simple_chain.py
learning_langchain/Chains/Runnables/: Readme.md  WithRunnablesDummyLangchainComponents.ipynb  WithoutRunnablesDummyLangchainComponents.ipynb  llm_chain.py  pdf_reader.py  runnable_sequence.py
learning_langchain/Chains/Runnables/PDF Reader Application/: flow.drawio  llm_app.py  pdf_reader.py
learning_langchain/Chains/Runnables/PDFReader/: retrievalQAChain_pdf_reader.py
learning_langchain/Chains/Runnables/RunnablePrimitives/: LCEL.py  runnable_branch.py  runnable_lambda.py  runnable_parllel.py  runnable_passthrough.py  runnable_sequence.py
learning_langchain/Models/: Readme.md  llm_chat_models.py  llm_model.py
learning_langchain/Models/Document Similarity Application/: main.py
learning_langchain/Models/close_source_models/: chat_embedding_model_openai.py  chat_embedding_model_openai_docs.py  chat_embedding_model_openai_query.py  chat_model_anthropic.py  chat_model_gemini.py  chat_models_openai.py
learning_langchain/Models/open_source_models/: chat_embedding_hf_local_model.py  chat_model_hf_using_api.py  chat_model_hf_using_local_model.py
learning_langchain/Prompts/: Readme.md  chat_history.txt  chat_prompt_template.py  message_placeholder.py
learning_langchain/Prompts/chatbot/: chatbot_with_messages.py  message_placeholder.py  messages.py
learning_langchain/Prompts/output_parser/json_output_parser/: closed_source_model_implementation.py  open_source_model_implementation.py
learning_langchain/Prompts/output_parser/pydantic_output_parser/: closed_source_model_implementation.py  open_source_model_implementation.py
learning_langchain/Prompts/output_parser/string_output_parser/: close_sourced_model_implementation.py  open_sourced_model_implementation.py
learning_langchain/Prompts/output_parser/structured_output_parser/: close_sourced_model_implementation.py  open_sourced_model_implementation.py
learning_langchain/Prompts/research_tool/: prompt_generator.py  prompt_ui.py  template.json
learning_langchain/Prompts/structured_output/validations/: json_schema.json  pydantic_validations.py  typed_dict_validations.py  with_structured_output_typed.py  (+3 more)
learning_langchain/RAG/: Readme.md  ai_poetry.txt  directory_loader.py
learning_langchain/RAG/DocumentLoaders/: csv_loader.py  pypdf_loader.py  text_loader.py  webbase_loader.py
learning_langchain/RAG/TextSplitting/: document_structured_based.py  length_based.py  semantic_meaning_based.py  text_structure_based.py
learning_langchain/RAG/VectorStore/: chroma.ipynb
learning_langgraph/: pyproject.toml
learning_langgraph/HumanInTheLoop/: humanintheloop.ipynb
(+6 files in other folders)
