[project]
name = "learning_langgraph"
version = "0.1.0"
description = "A learning project to explore LangGraph and its integrations with LangChain, MCP, Groq, and Tavily for building advanced LLM-based workflows and agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.8",
    "langsmith>=0.4.1",
    "mcp>=1.10.1",
    "python-dotenv>=1.1.0",
]
